ffmpeg: Fix forcing of the framerate for stream copy on input

Fixes Ticket2211

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>
(cherry picked from commit 356363c89830585b0a1476ccc16d79158260617c)